<resources>

    <string name="app_name">Moringa</string>

    <string name="powered">powered by mwinzi</string>

    <string name="login">click button below to login using your school email</string>

    <string name="welcome">Welcome back</string>
    <string name="name">Joseph Mwinzi</string>

    <string name="profile">Student Portal</string>
    <string name="practice">student management information system</string>

    <string name="pop">what you dwell on expands</string>

    <string name="info">But Before Code</string>
    <string name="code">Quote of the Day</string>
    <string name="wellness">Wellness</string>

    <string name="assistant">My Student Assistant</string>
    <string name="communication">Communication</string>
    <string name="notepad">Notepad</string>
    <string name="meet">Meet</string>
    <string name="sheet">Sheets</string>
    <string name="calendar">Calendar</string>

    <string name="desk">Desk and Coffee</string>
    <string name="blog">Student Blog</string>
    <string name="blog2">Student Media Hub</string>
    <string name="canvas">Canvas</string>
    <string name="canva">Student Learning Management System</string>
    <string name="github">Github</string>
    <string name="git">Let\'s build from here</string>

    <string name="qr">Click the button below to scan your</string>
    <string name="qrr">lecture attendance qr code</string>
    <string name="scan">Scan</string>

    <string name="tired">Wellness is meant to help the school track</string>
    <string name="tired2">your mental health</string>
    <string name="tired3">Fill form</string>

    <string name="mail">Gmail</string>
    <string name="mail2">Student Gmail Messages</string>
    <string name="slack">Slack</string>
    <string name="slack2">Digital HQ</string>
    <string name="contact">Contacts</string>
    <string name="contact2">Moringa school contacts</string>

    <string name="reminder">Reminders</string>
    <string name="reminder2">Set your reminders</string>
    <string name="task">Coding Tasks</string>
    <string name="task2">To Code Later</string>
    <string name="note">Notes</string>
    <string name="note2">Jot It Down</string>

    <string name="no">No Qr code Detected</string>
    <string name="hover">Hold phone over qr code</string>

    <string name="todo">image</string>

    <string-array name="daily_quotes">
        <item>@string/quoteOne</item>
        <item>@string/quoteTwo</item>
        <item>@string/quoteThree</item>
        <item>@string/quoteFour</item>
        <item>@string/quoteFive</item>
        <item>@string/quoteSix</item>
        <item>@string/quoteSeven</item>
        <item>@string/quoteEight</item>
        <item>@string/quoteNine</item>
        <item>@string/quoteTen</item>
        <item>@string/quoteEleven</item>
        <item>@string/quoteTwelve</item>
        <item>@string/quoteThirteen</item>
        <item>@string/quoteFourteen</item>
        <item>@string/quoteFifteen</item>
        <item>@string/quoteSixteen</item>
        <item>@string/quoteSeventeen</item>
        <item>@string/quoteEighteen</item>
        <item>@string/quoteNineteen</item>
        <item>@string/quoteTwenty</item>
        <item>@string/quoteTwentyOne</item>
        <item>@string/quoteTwentyTwo</item>
        <item>@string/quoteTwentyThree</item>
        <item>@string/quoteTwentyFour</item>
        <item>@string/quoteTwentyFive</item>
        <item>@string/quoteTwentySix</item>
        <item>@string/quoteTwentySeven</item>
        <item>@string/quoteTwentyEight</item>
        <item>@string/quoteTwentyNine</item>
        <item>@string/quoteThirty</item>
        <item>@string/quoteThirtyOne</item>
    </string-array>

    <string name="consistency">what you dwell on expands</string>

    <string name="quoteOne">Experience is the name everyone gives to their mistakes</string>
    <string name="quoteTwo">First solve the problem then write the code</string>
    <string name="quoteThree">Code is like humor. When you have to explain it, it’s bad</string>
    <string name="quoteFour">Make it work, make it right, make it fast</string>
    <string name="quoteFive">Clean code always looks like it was written by someone who cares</string>
    <string name="quoteSix">Code as if the next guy to maintain your code is a maniac who knows where you live</string>
    <string name="quoteSeven">Confusion is part of programming</string>
    <string name="quoteEight">Quality is a product of a conflict between programmers and testers</string>
    <string name="quoteNine">Software and cathedrals are much the same — first we build them, then we pray</string>
    <string name="quoteTen">Programmer: A machine that turns coffee into code</string>

    <string name="quoteEleven">There is always one more bug to fix</string>
    <string name="quoteTwelve">Give someone a program; you frustrate them for a day; teach them how to program, and you frustrate them for a lifetime</string>
    <string name="quoteThirteen">Don’t comment bad code – rewrite it</string>
    <string name="quoteFourteen">No one in the brief history of computing has ever written a piece of perfect software. It’s unlikely that you’ll be the first</string>
    <string name="quoteFifteen">Debugging becomes significantly easier if you first admit that you are the problem</string>
    <string name="quoteSixteen">A good programmer is someone who always looks both ways before crossing a one-way street</string>
    <string name="quoteSeventeen">The trouble with programmers is that you can never tell what a programmer is doing until it’s too late</string>
    <string name="quoteEighteen">Every great developer you know got there by solving problems they were unqualified to solve until they actually did it</string>
    <string name="quoteNineteen">Programs must be written for people to read, and only incidentally for machines to execute</string>
    <string name="quoteTwenty">In programming, if someone tells you you’re overcomplicating it, they’re either 10 steps behind you or 10 steps ahead of you</string>

    <string name="quoteTwentyOne">Truth can only be found in one place: the code</string>
    <string name="quoteTwentyTwo">The most important property of a program is whether it accomplishes the intention of its user</string>
    <string name="quoteTwentyThree">Learning the art of programming, like most other disciplines, consists of first learning the rules and then learning when to break them</string>
    <string name="quoteTwentyFour">Simplicity is the soul of efficiency</string>
    <string name="quoteTwentyFive">Copy-and-Paste was programmed by programmers for programmers actually</string>
    <string name="quoteTwentySix">One person\'s data is another person\'s program</string>
    <string name="quoteTwentySeven">You never finish a program, you just stop working on it</string>
    <string name="quoteTwentyEight">The best programs are the ones written when the programmer is supposed to be working on something else</string>
    <string name="quoteTwentyNine">One of the best programming skills you can have is knowing when to walk away for awhile</string>
    <string name="quoteThirty">There is nothing in the programming field more despicable than an undocumented program</string>
    <string name="quoteThirtyOne">The only way to learn a new programming language is by writing programs in it</string>

</resources>