<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorPrimary"
    tools:context=".Common.Wellness">

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/health"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="80dp"
        app:lottie_autoPlay="true"
        app:lottie_rawRes="@raw/lt_health" />

    <TextView
        android:id="@+id/health2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/health"
        android:layout_marginTop="120dp"
        android:layout_centerHorizontal="true"
        android:text="@string/tired"
        android:fontFamily="@font/gilroy_bold" />

    <TextView
        android:id="@+id/health3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tired2"
        android:layout_below="@id/health2"
        android:layout_centerHorizontal="true"
        android:fontFamily="@font/gilroy_bold" />

    <RelativeLayout
        android:layout_width="150dp"
        android:layout_height="40dp"
        android:layout_below="@+id/health3"
        android:layout_centerHorizontal="true"
        android:background="@drawable/bg_rounded"
        android:layout_marginTop="100dp">

        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/tired3"
            android:onClick="fill"
            android:layout_margin="3dp"
            android:background="@color/clear"
            android:layout_centerInParent="true"
            android:textColor="?attr/colorOnPrimary"
            android:fontFamily="@font/gilroy_bold" />

    </RelativeLayout>



</RelativeLayout>