<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorPrimary"
    tools:context=".Common.Communication">

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/bubble"
        android:layout_width="180dp"
        android:layout_height="180dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="80dp"
        app:lottie_autoPlay="true"
        app:lottie_rawRes="@raw/lt_communication" />

    <androidx.cardview.widget.CardView
        android:id="@+id/gmail"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_margin="20dp"
        android:layout_above="@id/slack"
        style="@style/dash">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/mail"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_centerVertical="true"
                android:layout_marginStart="20dp"
                android:contentDescription="@string/todo"
                android:src="@drawable/ic_mail" />

            <TextView
                android:id="@+id/mail2"
                style="@style/dash"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="30dp"
                android:layout_toEndOf="@id/mail"
                android:text="@string/mail" />

            <TextView
                android:id="@+id/mail3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/mail2"
                android:layout_marginStart="20dp"
                android:layout_marginTop="5dp"
                android:layout_toEndOf="@id/mail"
                android:fontFamily="@font/gilroy_medium"
                android:text="@string/mail2"
                style="@style/duke"
                android:textSize="12sp" />

            <Button
                android:id="@+id/btn_gmail"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/clear"
                android:onClick="gmail" />

        </RelativeLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/slack"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_alignParentBottom="true"
        style="@style/dash"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="50dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/slack2"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_centerVertical="true"
                android:layout_marginStart="20dp"
                android:contentDescription="@string/todo"
                android:src="@drawable/ic_slack" />

            <TextView
                android:id="@+id/slack3"
                style="@style/dash"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="30dp"
                android:layout_toEndOf="@id/slack2"
                android:text="@string/slack" />

            <TextView
                android:id="@+id/slack4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/slack3"
                android:layout_marginStart="20dp"
                android:layout_marginTop="5dp"
                android:layout_toEndOf="@id/slack2"
                android:fontFamily="@font/gilroy_medium"
                android:text="@string/slack2"
                style="@style/duke"
                android:textSize="12sp" />

            <Button
                android:id="@+id/btn_slack"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/clear"
                android:onClick="slack" />

        </RelativeLayout>

    </androidx.cardview.widget.CardView>

</RelativeLayout>