<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorPrimary"
    tools:context=".Common.Notepad">

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/task"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="80dp"
        app:lottie_autoPlay="true"
        app:lottie_rawRes="@raw/lt_task" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:layout_alignParentBottom="true">

        <androidx.cardview.widget.CardView
            android:id="@+id/reminder"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="20dp"
            style="@style/dash">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/reminder2"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="20dp"
                    android:contentDescription="@string/todo"
                    android:src="@drawable/ic_reminder" />

                <TextView
                    android:id="@+id/reminder3"
                    style="@style/dash"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="30dp"
                    android:layout_toEndOf="@id/reminder2"
                    android:text="@string/reminder" />

                <TextView
                    android:id="@+id/reminder4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/reminder3"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="5dp"
                    android:layout_toEndOf="@id/reminder2"
                    android:fontFamily="@font/gilroy_medium"
                    android:text="@string/reminder2"
                    style="@style/duke"
                    android:textSize="12sp" />

                <Button
                    android:id="@+id/btn_reminder"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/clear"
                    android:onClick="remind" />

            </RelativeLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/todo"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            style="@style/dash"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="20dp"
            android:layout_below="@id/reminder">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/todo2"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="20dp"
                    android:contentDescription="@string/todo"
                    android:src="@drawable/ic_bulb" />

                <TextView
                    android:id="@+id/todo3"
                    style="@style/dash"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="30dp"
                    android:layout_toEndOf="@id/todo2"
                    android:text="@string/task" />

                <TextView
                    android:id="@+id/todo4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/todo3"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="5dp"
                    android:layout_toEndOf="@id/todo2"
                    android:fontFamily="@font/gilroy_medium"
                    android:text="@string/task2"
                    style="@style/duke"
                    android:textSize="12sp" />

                <Button
                    android:id="@+id/btn_todo"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/clear"
                    android:onClick="todo" />

            </RelativeLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/notes"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_margin="20dp"
            android:layout_below="@id/todo"
            style="@style/dash">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/note2"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="20dp"
                    android:contentDescription="@string/todo"
                    android:src="@drawable/ic_docs" />

                <TextView
                    android:id="@+id/note3"
                    style="@style/dash"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="30dp"
                    android:layout_toEndOf="@id/note2"
                    android:text="@string/note" />

                <TextView
                    android:id="@+id/note4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/note3"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="5dp"
                    android:layout_toEndOf="@id/note2"
                    android:fontFamily="@font/gilroy_medium"
                    android:text="@string/note2"
                    style="@style/duke"
                    android:textSize="12sp" />

                <Button
                    android:id="@+id/btn_notes"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/clear"
                    android:onClick="noter" />

            </RelativeLayout>

        </androidx.cardview.widget.CardView>

    </RelativeLayout>

</RelativeLayout>